# your option) any later version.
#
# StarPU is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
#
# See the GNU Lesser General Public License in COPYING.LGPL for more details.
#

StarPU 1.2.9 (git revision xxx)
==============================================

StarPU 1.2.8 (git revision f66374c9ad39aefb7cf5dfc31f9ab3d756bcdc3c)
==============================================

Small features:
  * Minor fixes

StarPU 1.2.7 (git revision 07cb7533c22958a76351bec002955f0e2818c530)
==============================================

Small features:
  * Add STARPU_HWLOC_INPUT environment variable to save initialization time.
  * Add starpu_data_set/get_ooc_flag.
  * Use starpu_mpi_tag_t (int64_t) for MPI communication tag

StarPU 1.2.6 (git revision 23049adea01837479f309a75c002dacd16eb34ad)
==============================================

Small changes:
  * Fix crash for lws scheduler
  * Avoid making hwloc load PCI topology when CUDA is not enabled

StarPU 1.2.5 (git revision 22f32916916d158e3420033aa160854d1dd341bd)
==============================================

Small features:
  * Add a new value STARPU_TASK_COLOR to be used in
    starpu_task_insert() to pick up the color of a task in dag.dot
  * Add starpu_data_pointer_is_inside().

Changes:
  * Do not export -lcuda -lcudart -lOpenCL in *starpu*.pc.

StarPU 1.2.4 (git revision 255cf98175ef462749780f30bfed21452b74b594)
==============================================

Small features:
   * Catch of signals SIGINT and SIGSEGV to dump fxt trace files.
   * New configure option --disable-icc to disable the compilation of
     specific ICC examples
   * Add starpu_codelet_pack_arg_init, starpu_codelet_pack_arg,
     starpu_codelet_pack_arg_fini for more fine-grain packing capabilities.
   * Add starpu_task_insert_data_make_room,
     starpu_task_insert_data_process_arg,