@@ -2,7 +2,7 @@
  *
  * Copyright (C) 2010-2018                                CNRS
  * Copyright (C) 2011-2012,2014,2016-2017                 Inria
- * Copyright (C) 2009-2011,2014-2018                      Université de Bordeaux,
+ * Copyright (C) 2009-2011,2014-2019                      Université de Bordeaux,
  *
  * StarPU is free software; you can redistribute it and/or modify
  * it under the terms of the GNU Lesser General Public License as published by
@@ -153,7 +153,7 @@ be extended as well), change the available GPU memory size, PCI memory bandwidth
 
 The simulation can be tweaked, to be able to tune it between a very accurate
 simulation and a very simple simulation (which is thus close to scheduling
-theory results), see the \ref STARPU_SIMGRID_CUDA_MALLOC_COST and
+theory results), see the \ref STARPU_SIMGRID_TRANSFER_COST, \ref STARPU_SIMGRID_CUDA_MALLOC_COST and
 \ref STARPU_SIMGRID_CUDA_QUEUE_COST environment variables.
 
 \section SimulationMPIApplications MPI Applications
